fix(WKLayout): hide wk-layout-tab on small screens to remove 60px ghost space

--- a/packages/dmworkbase/src/Components/WKLayout/index.css
+++ b/packages/dmworkbase/src/Components/WKLayout/index.css
@@ -66,4 +66,8 @@
     .wk-layout-content-left {
         width: 100%;
     }
+
+    .wk-layout-tab {
+        display: none;
+    }
 }
